# This file is a shell script fragment that supplies the information
# necessary for a configure script to process the program in
# this directory.  For more information, look at ../configure.

# We need multilib support.
. ${srcdir}/../cfg-ml-com.in

configdirs=
srctrigger=getopt1.c
srcname="-liberty library"

# per-host:

files="alloca-norm.h"
links="alloca-conf.h"

xhost=${target}
. ${srcdir}/config.table
host_makefile_frag=${frag}

# per-target:

# post-target:

# If we are cross-compiling, check at compile time whether we are
# using newlib.  If we are, we already know the files we need, since
# the linker will fail when run on some of the newlib targets.
if [ "${host}" != "${target}" ] ; then
  cat > Makefile.tem <<'!EOF!'
CONFIG_H = xconfig.h
NEEDED_LIST = xneeded-list

xconfig.h: Makefile
	if [ -f ../newlib/Makefile ]; then \
	  echo "#define NEED_sys_nerr 1" >xconfig.h; \
	  echo "#define NEED_sys_errlist 1" >>xconfig.h; \
	  echo "#define NEED_sys_siglist 1" >>xconfig.h; \
	  echo "#define NEED_psignal 1" >>xconfig.h; \
	else \
	  $(MAKE) $(FLAGS_TO_PASS) lconfig.h; \
	  cp lconfig.h xconfig.h; \
	fi

xneeded-list: Makefile
	if [ -f ../newlib/Makefile ]; then \
	  echo insque.o random.o strdup.o alloca.o >xneeded-list; \
	else \
	  $(MAKE) $(FLAGS_TO_PASS) lneeded-list; \
	  cp lneeded-list xneeded-list; \
	fi
!EOF!
sed -e "/^####/  r Makefile.tem" \
  -e '/INSTALL_DEST =/s/libdir/tooldir/' ${Makefile} > Makefile.tem3
mv Makefile.tem3 ${Makefile}
rm -f Makefile.tem
fi

if [ "${srcdir}" = "." ] ; then
  echo "EXTRA_LINKS = ${source_links}" >>Makefile
fi

# We need multilib support.
. ${srcdir}/../cfg-ml-pos.in
