dnl Process this file with autoconf to produce a configure script.
AC_INIT(rx.c)

AC_PROG_CC
AC_PROG_CPP
AC_PROG_RANLIB
AC_PROG_INSTALL

dnl Check for gcc explicitly in case the linker does not work when
dnl using a cross compiler.
if test "${GCC}" = "yes"; then
  AC_DEFINE(HAVE_ALLOCA)
else
  AC_FUNC_ALLOCA
fi
AC_STDC_HEADERS
AC_HAVE_HEADERS(string.h)

AC_CANONICAL_SYSTEM
echo $ac_n "checking for target makefile fragment... $ac_c" 1>&6
target_frag=
if test "${enable_shared}" = "yes" ; then
  case "${target}" in
    hppa*-*-*)		target_frag=../config/mh-papic ;;
    i[345]86-*-*)	target_frag=../config/mh-x86pic ;;
    *-*-*) 		target_frag=../config/mh-${target_cpu}pic ;;
  esac
  target_frag=${srcdir}/${target_frag}
fi
if test ! -f "${target_frag}"; then
  target_frag=/dev/null
  echo "none" 1>&6
else
  echo ${target_frag} 1>&6
fi
AC_SUBST_FILE(target_frag)

AC_OUTPUT(Makefile)
